wacc/test/golden/syntaxErr.sequence.emptySeq
# extra sequential composition

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin ; end


Syntax error in test/wacc_examples/invalid/syntaxErr/sequence/emptySeq.wacc (line 11, column 7):
unexpected ";"
expected function declaration or statement
extra semi-colons are not valid, there must be exactly one between each statement

> 
> begin ; end
>       ^

